# windows-process-monitor

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-12-windows-perf-monitor-widget.md
docs/superpowers/specs/: 2026-06-12-windows-perf-monitor-widget-design.md
src/: app.rs  config.rs  lib.rs  main.rs  stats.rs  win_memory.rs
tests/: config_test.rs
