[package]
name = "monitor-widget"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.31"
eframe = "0.31"
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
